Alignment fix

--- a/include/css/style.css
+++ b/include/css/style.css
@@ -239,7 +239,7 @@ html,body{
   background-color: rgba(171, 170, 170, 0.34);
   vertical-align: middle;
   text-align: center;
-  margin-top:15%;
+  margin-top:13%;
 }
 .work{
     margin: 0 auto;
